appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- runFlow: ../../utils/ImportWalletWithKey.yaml

# Connect to Anvil (test network)
- tapOn:
    id: dev-button-anvil

# Open send sheet
- retry:
    maxRetries: 3
    commands:
      - swipe:
          direction: DOWN
      - assertVisible:
          id: 'balance-coin-row-Ethereum'
- tapOn:
    id: send-button
- assertVisible:
    id: send-asset-form-field

# Test ENS address input
- inputText: 'rainbowwallet.eth'
- retry:
    maxRetries: 3
    commands:
      - assertVisible:
          id: send-asset-list

# Test Add Contact functionality
- tapOn:
    id: add-contact-button
- assertVisible:
    id: wallet-info-input
- tapOn: 'Cancel'
- tapOn:
    id: add-contact-button
- tapOn: 'Add Contact'

# Test updating contact name after edit
- tapOn:
    id: edit-contact-button
- tapOn: 'Edit Contact'
- inputText: '123'
- tapOn:
    id: wallet-info-submit-button
- assertVisible: 'rainbowwallet.eth123'

# Test showing Add Contact Button after deleting contact
- tapOn:
    id: edit-contact-button
- tapOn: 'Delete Contact'
- tapOn: 'Delete Contact'
- assertVisible:
    id: add-contact-button
