appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- runFlow: ../../utils/ImportWalletWithKey.yaml

# Connect to Anvil (test network)
- tapOn:
    id: dev-button-anvil

# Open send sheet
- retry:
    maxRetries: 3
    commands:
      - assertVisible:
          id: 'balance-coin-row-Ethereum'

- retry:
    maxRetries: 3
    commands:
      - swipe:
          from:
            id: wallet-screen
          direction: UP
      - assertVisible: '.*Rainbow Pooly.*'

- retry:
    maxRetries: 3
    commands:
      - swipe:
          from:
            id: wallet-screen
          direction: UP
      - tapOn: '.*Rainbow Pooly.*'

- retry:
    maxRetries: 3
    commands:
      - swipe:
          from:
            id: wallet-screen
          direction: UP
      - extendedWaitUntil:
          visible:
            id: 'wrapped-nft-Rainbow Pooly 16'
          timeout: 15000
      - tapOn:
          id: 'wrapped-nft-Rainbow Pooly 16'

# we need to wait for the sheet to be done before clicking on the send else Maestro will click on the image
- waitForAnimationToEnd:
    timeout: 2000

- retry:
    maxRetries: 3
    commands:
      - assertVisible:
          id: 'send-action-button'
- tapOn:
    id: 'send-action-button'

# Test ENS address input
- inputText: 'rainbowwallet.eth'
- assertVisible: '.*Review'
- tapOn: '.*Review'

- assertVisible: 'Sending'
- assertVisible: 'Rainbow Pooly 16'
- assertVisible: 'to'
- assertVisible: 'rainbowwallet.eth'

- longPressOn: '.*Hold to Send'
- runFlow: ../../utils/MaybeInputPin.yaml

# Check toast data
- extendedWaitUntil:
    visible:
      text: 'Sending'
      childOf:
        id: toast-.*
    timeout: 15000
- extendedWaitUntil:
    visible:
      text: 'Rainbow Pooly 16'
      childOf:
        id: toast-.*
    timeout: 15000
# Open toast
- tapOn:
    id: toast-.*
- assertVisible: 'Sending'
- assertVisible: 'Rainbow Pooly'
- tapOn:
    id: toast-expanded-.*
# Check transaction sheet
- assertVisible: 'Sending'
- assertVisible: '.*Tx Hash.*'
- assertVisible:
    id: 'view-details-action-button'
- swipe:
    direction: DOWN
