appId: ${APP_ID}
tags:
  - wallet
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- runFlow: ../../utils/ImportWalletWithKey.yaml

# Connect to Anvil (test network)
- tapOn:
    id: dev-button-anvil

# Open send sheet
- retry:
    maxRetries: 3
    commands:
      - assertVisible:
          id: 'balance-coin-row-Ethereum'
- tapOn:
    id: send-button
- assertVisible:
    id: send-asset-form-field

# Test ENS address input
- inputText: 'rainbowwallet.eth'
- retry:
    maxRetries: 3
    commands:
      - assertVisible:
          id: send-asset-list

# unsure why but the id doesn't work on iOS and the text doesn't work on Android
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: '.*Ethereum.*'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: send-asset
- tapOn:
    id: selected-asset-field-input
- inputText: '0.01'

- retry:
    maxRetries: 3
    commands:
      - assertVisible: .*Review
- tapOn: .*Review

# Test enter amount
- assertVisible: 'Sending'
- assertVisible: '0.01 ETH'
- assertVisible: 'rainbowwallet.eth'

- longPressOn: '.*Hold to Send'
- runFlow: ../../utils/MaybeInputPin.yaml

# Check toast data
- extendedWaitUntil:
    visible:
      text: 'Sending'
      childOf:
        id: toast-.*
    timeout: 15000
- extendedWaitUntil:
    visible:
      text: '0.01 ETH'
      childOf:
        id: toast-.*
    timeout: 15000
# Open toast
- tapOn:
    id: toast-.*
- waitForAnimationToEnd:
    timeout: 2000
# Check expanded toast data
- assertVisible:
    text: 'Sending'
    childOf:
      id: toast-expanded-.*
- assertVisible:
    text: '0.01 ETH'
    childOf:
      id: toast-expanded-.*
- tapOn:
    id: toast-expanded-.*
# Check transaction sheet
- assertVisible: 'Sending'
- assertVisible: '.*Tx Hash.*'
- assertVisible:
    id: 'view-details-action-button'
- swipe:
    direction: DOWN
